fixes menu on smaller devices

--- a/Style/responsive.css
+++ b/Style/responsive.css
@@ -1,4 +1,3 @@
-
 @media screen and (max-width: 800px) {
     .topnav .navButton:not(:first-child) {
         display: none;
@@ -29,7 +28,6 @@
     }
 }
 
-
 @media screen and (max-width: 800px) {
     .topnav.responsive {
         /* position: absolute; */
@@ -51,6 +49,11 @@
     }
     #pageTitle {
         display: none;
+    }
+    .main {
+        margin-top: 40px;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
 
@@ -79,7 +82,6 @@
         display: initial;
     }
 }
-
 
 @media (hover: none) and (orientation: portrait) {
     /* body {
