--- a/Style/style.css
+++ b/Style/style.css
@@ -203,9 +203,9 @@ button:disabled {
 }
 
 .main {
-    margin-top: 40;
-    margin-left: 50;
-    margin-right: 50;
+    margin-top: 40px;
+    margin-left: 50px;
+    margin-right: 50px;
     display: inline-block;
 }
 
